--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
             <div class="service-info">
               <h3>Our experience</h3>
               <p>
-              First Principles Advisory group has been instrumental in solving unique and hard problems for our clients. Highlighted are some of our cases.<br><br>            </div>
+              First Principles Advisory group has been instrumental in solving unique and hard problems for our clients. These are a selection of some cases.<br><br>            
+            </div>
           </div>
         </div>
       </div>
@@ -192,17 +193,26 @@
           <div class="col-lg-8 col-lg-offset-2">
             <div class="service-info">
 
-              Case Study 1              
+              Case Study 1: Medical affairs planning for immuno-oncology drug launch for a Fortune 500 pharmaceutical company <br>
+             
               <p>
-             Case study description
+             Case study description<br>
+              Issue: <br>
+              FP approach: <br>
+              Outcome: <br>
+              Client feedback: <br>
               </p>
             </div>
           </div>
           <div class="col-lg-8 col-lg-offset-2">
             <div class="service-info">
-              <h3>Case Study 2</h3>
+              Case Study 2: 
               <p>
-                Description
+             Case study description<br>
+              Issue: <br>
+              FP approach: <br>
+              Outcome: <br>
+              Client feedback: <br>   
               </p>
             </div>
           </div>
@@ -210,6 +220,13 @@
       </div>
   </section> <!--/#case study-->
 
+
+  <section id="break_1" class="parallax">
+    <div class="container">
+      <div class="row">
+      </div>
+    </div>
+  </section><!--/#break_1-->
 
   <section id="people">
     <div class="container">
@@ -273,7 +290,7 @@
           San Francisco, CA 94104<br>
           Phone: <br>
           email: <br><br>
-          Visit us on <a href="https://www.linkedin.com/company/6394435?trk=tyah&trkInfo=clickedVertical%3Acompany%2CclickedEntityId%3A6394435%2Cidx%3A2-1-2%2CtarId%3A1481064154687%2Ctas%3Afirst%20principles%20ad"><img src="images/client-logos/linkedin.png" class="thumbnail img-responsive"></a>
+          Visit us on <a href="https://www.linkedin.com/company/6394435?trk=tyah&trkInfo=clickedVertical%3Acompany%2CclickedEntityId%3A6394435%2Cidx%3A2-1-2%2CtarId%3A1481064154687%2Ctas%3Afirst%20principles%20ad"><img src="images/linkedin.png" class="thumbnail img-responsive"></a>
             </p>
          
         </div>
