--- a/index.html
+++ b/index.html
@@ -81,8 +81,14 @@
               <p>
               First Principles Advisory Group is a boutique management consultancy focused exclusively on the healthcare industry. We were founded in 2010 and are located in the San Francisco Bay Area.<br><br>
               We set ourselves apart from typical life sciences consultancies in several ways: (1) we focus on both strategy and the operational implementation of our work; (2) we provide seasoned partners and project leaders as dedicated points of contact on all our projects; (3) we exhibit a breadth and depth of in-house industry and consulting experiences.<br><br>
-              We have extensive, long term relationships with large, public companies, mid-size firms, well-financed early stage companies, and venture capital firms. <br><br> 
+              We have extensive, long term relationships with large, Fortune 500 public companies, mid-size firms, well-financed early stage companies, and venture capital firms. <br><br> 
               </p>
+              <p>We embrace diversity:  80% of our staff are women and/or under-represented minorities.</p>
+              <p> Note:
+              <ul style="list-style-type:disc">
+                <li><i> 1.	We do not currently have any affiliates, subsidiaries, or alliances services.</i></li>
+                <li><i> 2.  our primary footprint of operations is focused on the United States</i></li>
+              </ul> </p>
             </div>
           </div>
         </div>
@@ -187,7 +193,13 @@
           </div>
         </div>
       </div>
-
+ 
+  <section id="break_1" class="parallax">
+    <div class="container">
+      <div class="row">
+      </div>
+    </div>
+  </section><!--/#break_1-->
 
       <div class="text-left our-services">
         <div class="row">
