--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
     </div> 
   </section><!--/#services-->
 
+  <section id="break_1" class="parallax">
+    <div class="container">
+      <div class="row">
+      </div>
+    </div>
+  </section><!--/#break_1-->
 
  <section id="case studies">
     <div class="container">
